Refactor code unused and libreries unused